tests/baselines/reference/topLevelLambda4.errors.txt
topLevelLambda4.ts(1,22): error TS2532: Object is possibly 'undefined'.


==== topLevelLambda4.ts (1 errors) ====
    export var x = () => this.window;
                         ~~~~
!!! error TS2532: Object is possibly 'undefined'.